tests/ui/proc-macro/expand-to-unstable.stderr
error[E0658]: use of unstable library feature `core_intrinsics`: intrinsics are unlikely to ever be stabilized, instead they should be used through stabilized interfaces in the rest of the standard library
  --> $DIR/expand-to-unstable.rs:9:10
   |
LL | #[derive(Unstable)]
   |          ^^^^^^^^
   |
   = help: add `#![feature(core_intrinsics)]` to the crate attributes to enable
   = note: this compiler was built on YYYY-MM-DD; consider upgrading it if it is out of date
   = note: this error originates in the derive macro `Unstable` (in Nightly builds, run with -Z macro-backtrace for more info)

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0658`.
